app/assets/stylesheets/responsive/_print_layout.scss
div#content, div#left_column, div.entirebody div#wrapper {
  width: 100%;
  margin: 0;
  float: none;
}

div#content {
  padding-right: 0;
  width: 96%;
}

#wrapper {
  width: auto;
  padding: 0;

}

p.event_actions,
div#after_actions,
#right_column,
#banner,
.admin .navbar,
#header_right,
#describe_state_form_1,
#describe_state_form_2,
.attachment_image,
#footer {
  display: none;
}

p#request_status {
  page-break-after: avoid;
}

.correspondence {
  page-break-before: avoid;
}

.popup {
  display: none;
}

.not-for-print {
  display: none !IMPORTANT;
}

